# bazingabot

./: .dockerignore  .env  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.production  LICENSE  README.md
.github/workflows/: cd_workflow.yml
src/: main.rs
src/commands/: apina.rs  lolcall.rs  meta.rs  mod.rs  owner.rs  quote.rs  quotelast.rs  riot.rs
