[package]
name = "bazingabot"
version = "0.1.0"
authors = ["jlouhela <louhela.joni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
regex = "1"
rand = "0.8"
serde = "1.0"
riven = "1.11"

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend"]
